--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,10 @@ logging.level.org.springframework=info
 
 spring.security.user.name=cliff
 spring.security.user.password=12345
+
+spring.datasource.url=jdbc:mysql://localhost:3306/employeeMgtDB
+spring.datasource.username=root
+spring.datasource.password=Cliff123
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
